--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -3,10 +3,12 @@
 <section class="cards">
 	<!-- 2 -->
 	<section  [class]="'card card--'+card.Suit" attr.value={{card.Value}} *ngFor="let card of deck">
+        <img class = "card-image" src="/assets/images/qr/qr1.png" alt="image">
+
 		<div class="card__inner card__inner--centered">
 			<div class="card__column">
                 As you can see, this directive starts with the keyword "class" followed by the name of the CSS class you want to toggle, separated by a dot.
-			</div>
+            </div>
 		</div>
     </section>
     
