--- a/src/app/components/card/card.component.less
+++ b/src/app/components/card/card.component.less
@@ -1,7 +1,7 @@
 @color: #c0c0c0;
 @background: #f0f0f0;
 @gutter: 10px;
-@font-size: 16px;
+@font-size: 13px;
 
 @card-background: #fff;
 @card-padding: 4px;
@@ -19,7 +19,7 @@ body {
 
 .cards {
   text-align: center;
-  max-width: 640px;
+  max-width: 100%;
   margin: 0 auto;
 }
 
@@ -94,10 +94,11 @@ body {
 
 .card__inner {
   box-sizing: border-box;
+  border-style: ridge;
   position: absolute;
   display: flex;
   justify-content: space-between;
-  top: 6 * @card-padding;
+  top: 13 * @card-padding;
   left: 6 * @card-padding;
   right: 6 * @card-padding;
   bottom: 6 * @card-padding;
@@ -160,9 +161,10 @@ body {
     flex-basis: 0.45 * @card-height;
   }
 }
-
-.title {
-  font: 18px "Trebuchet MS";
-  color: #444;
-  text-align: center;
+.card-image{
+  width: 50px;
+  height: 50px;
+  position: absolute;
+  top: 0;
+  right: 0%;
 }
