added vmc text in lower left

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -9,7 +9,8 @@
 			<div class="card__column">
                 As you can see, this directive starts with the keyword "class" followed by the name of the CSS class you want to toggle, separated by a dot.
             </div>
-		</div>
+        </div>
+        <span class="vmc-text">VMC <br>{{card.Value}}{{card.Suit.charAt(0).toUpperCase()}}</span>
     </section>
     
     
