--- a/src/app/components/card/card.component.less
+++ b/src/app/components/card/card.component.less
@@ -101,7 +101,7 @@ body {
   top: 13 * @card-padding;
   left: 6 * @card-padding;
   right: 6 * @card-padding;
-  bottom: 6 * @card-padding;
+  bottom: 8 * @card-padding;
 
   &--centered {
     justify-content: center;
@@ -167,4 +167,13 @@ body {
   position: absolute;
   top: 0;
   right: 0%;
+}
+
+.vmc-text{
+  position: absolute;
+  bottom: 0%;
+  left: 0;
+  font-weight: bold;
+  font-size: 12px;
+  margin-left: 6px;
 }
