--- a/src/app/components/card/card.component.less
+++ b/src/app/components/card/card.component.less
@@ -177,3 +177,9 @@ body {
   font-size: 12px;
   margin-left: 6px;
 }
+
+.title {
+	font: 18px 'Trebuchet MS';
+	color: #444;
+	text-align: center;
+}
