--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,12 +1,11 @@
-<section class="cards">
+<section class="cards" *ngIf="content">
     <h1 class="title">Spades</h1>
 
     <section  [class]="'card card--'+card.Suit" attr.value={{card.Value}} *ngFor="let card of spades">
         <img class = "card-image" src="/assets/images/qr/qr1.png" alt="image">
 
 		<div class="card__inner card__inner--centered">
-			<div class="card__column">
-                As you can see, this directive starts with the keyword "class" followed by the name of the CSS class you want to toggle, separated by a dot.
+			<div class="card__column" [innerHTML]="content.main_version.statement">
             </div>
         </div>
         <span class="vmc-text">VMC <br>{{card.Value}}{{card.Suit.charAt(0).toUpperCase()}}</span>
