--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,3 @@
-<div>
-    <app-card></app-card>
+<div *ngIf="cards">
+    <mat-card class="card" *ngFor="let card of cards"> {{card.title}}</mat-card>
 </div>
