added card service

--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,6 @@
 <div *ngIf="cards">
-    <mat-card class="card" *ngFor="let card of cards"> {{card.title}} <span class="number">{{card.card_value}}{{card.card_suit.charAt(0).toUpperCase()}}</span></mat-card>
+    <mat-card 
+        class="card" 
+        [routerLink]="[card.slug]"
+        *ngFor="let card of cards"> {{card.title}} <span class="number">{{card.card_value}}{{card.card_suit.charAt(0).toUpperCase()}}</span></mat-card>
 </div>
