--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,14 +1,14 @@
-<section class="cards">
-    <h1 class="title">Spades</h1>
+<section class="cards" *ngIf="updatedContent">
+    <h1 class="title">{{state.data.title}}</h1>
 
-    <section  class ="card card--heart" value="5">
+    <section  [class]="'card card--'+state.data.card_suit" attr.value={{state.data.card_value}}>
         <img class = "card-image" src="/assets/images/qr/qr1.png" alt="image">
 
 		<div class="card__inner card__inner--centered">
 			<div class="card__column">
-                text text
+                {{updatedContent.main_version.statement}}
             </div>
         </div>
-        <span class="vmc-text">VMC <br>5</span>
+        <span class="vmc-text">VMC <br>{{state.data.card_value}}{{state.data.card_suit.charAt(0).toUpperCase()}}</span>
     </section>    
 </section>
