--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,5 +2,6 @@
     <mat-card 
         class="card" 
         [routerLink]="[card.slug]"
+        [state] = "{data: card}"
         *ngFor="let card of cards"> {{card.title}} <span class="number">{{card.card_value}}{{card.card_suit.charAt(0).toUpperCase()}}</span></mat-card>
 </div>
