--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -5,8 +5,7 @@
         <img class = "card-image" src="/assets/images/qr/qr1.png" alt="image">
 
 		<div class="card__inner card__inner--centered">
-			<div class="card__column">
-                {{updatedContent.main_version.statement}}
+			<div class="card__column" [innerHTML]="updatedContent.main_version.statement">
             </div>
         </div>
         <span class="vmc-text">VMC <br>{{state.data.card_value}}{{state.data.card_suit.charAt(0).toUpperCase()}}</span>
