--- a/src/app/components/card/card.component.less
+++ b/src/app/components/card/card.component.less
@@ -5,8 +5,8 @@
 
 @card-background: #fff;
 @card-padding: 4px;
-@card-width: 336px;
-@card-height: 432px;
+@card-width: 240px;
+@card-height: 336px;
 @card-color-red: #e44145;
 @card-color-black: #252525;
 @card-symbol-size: 40px;
@@ -182,4 +182,40 @@ body {
 	font: 18px 'Trebuchet MS';
 	color: #444;
 	text-align: center;
+}
+.House_image_0{
+  width: 100%;
+  height: 160px;
+}
+.Colouring_image_0{
+  width: 100%;
+}
+.Newspaper_image_0{
+  width: 100%;
+}
+.Two_Distances_image_0{
+  width: 100%;
+  height: 110px;
+}
+.Avoid_the_River_image_0{
+  width: 100%;
+  height: 130px;
+}
+.Counting_Squares_image_0{
+  width: 100%;
+}
+.Going_to_School_image_0{
+  width: 100%;
+}
+.Benford_s_Law_image_0{
+  width: 50%;
+}
+.Benford_s_Law_image_1{
+  width: 50%;
+}
+.Card_Sums_image_0{
+  width: 50%;
+}
+.Pong_Hau_K_i_image_0{
+  width: 100%;
 }
