--- a/src/app/components/card/card.component.less
+++ b/src/app/components/card/card.component.less
@@ -5,8 +5,8 @@
 
 @card-background: #fff;
 @card-padding: 4px;
-@card-width: 240px;
-@card-height: 336px;
+@card-width: 270px;
+@card-height: 366px;
 @card-color-red: #e44145;
 @card-color-black: #252525;
 @card-symbol-size: 40px;
@@ -218,4 +218,5 @@ body {
 }
 .Pong_Hau_K_i_image_0{
   width: 100%;
+  height: 90px;
 }
