added qr image links

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -2,7 +2,7 @@
     <h1 class="title">{{state.data.title}}</h1>
 
     <section  [class]="'card card--'+state.data.card_suit" attr.value={{state.data.card_value}}>
-        <img class = "card-image" src="/assets/images/qr/qr1.png" alt="image">
+        <img class = "card-image" src="/assets/images/qr/https---virtualmathscamp.com-card-{{state.data.card_value}}{{state.data.card_suit.charAt(0).toUpperCase()}}.html.png" alt="image">
 
 		<div class="card__inner card__inner--centered">
 			<div class="card__column" [innerHTML]="updatedContent.main_version.statement">
