changed design style for chatbot text

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -8,6 +8,6 @@
 			<div class="card__column" [innerHTML]="updatedContent.main_version.statement">
             </div>
         </div>
-        <span class="vmc-text">VMC <br>{{state.card_value}}{{state.card_suit.charAt(0).toUpperCase()}}</span>
+        <span class="vmc-text">Chatbot <br>VMC_{{state.card_value}}{{state.card_suit.charAt(0).toUpperCase()}}</span>
     </section>    
 </section>
