--- a/src/app/components/cards/cards.component.less
+++ b/src/app/components/cards/cards.component.less
@@ -24,6 +24,7 @@ body {
 }
 
 .card {
+  cursor: pointer;
   position: relative;
   display: inline-block;
   width: @card-width;
@@ -161,7 +162,7 @@ body {
     flex-basis: 0.45 * @card-height;
   }
 }
-.card-image{
+.card-image {
   width: 50px;
   height: 50px;
   position: absolute;
@@ -169,7 +170,7 @@ body {
   right: 0%;
 }
 
-.vmc-text{
+.vmc-text {
   position: absolute;
   bottom: 0%;
   left: 0;
@@ -179,49 +180,49 @@ body {
 }
 
 .title {
-	font: 18px 'Trebuchet MS';
-	color: #444;
-	text-align: center;
+  font: 18px "Trebuchet MS";
+  color: #444;
+  text-align: center;
 }
-.House_image_0{
+.House_image_0 {
   width: 100%;
   height: 160px;
 }
-.Colouring_image_0{
+.Colouring_image_0 {
   width: 100%;
 }
-.Newspaper_image_0{
+.Newspaper_image_0 {
   width: 100%;
 }
-.Two_Distances_image_0{
+.Two_Distances_image_0 {
   width: 100%;
   height: 110px;
 }
-.Avoid_the_River_image_0{
+.Avoid_the_River_image_0 {
   width: 100%;
   height: 130px;
 }
-.Counting_Squares_image_0{
+.Counting_Squares_image_0 {
   width: 100%;
   height: 195px;
 }
-.Going_to_School_image_0{
+.Going_to_School_image_0 {
   width: 100%;
 }
-.Benford_s_Law_image_0{
+.Benford_s_Law_image_0 {
   width: 50%;
 }
-.Benford_s_Law_image_1{
+.Benford_s_Law_image_1 {
   width: 50%;
 }
-.Card_Sums_image_0{
+.Card_Sums_image_0 {
   width: 50%;
 }
-.Pong_Hau_K_i_image_0{
+.Pong_Hau_K_i_image_0 {
   width: 90%;
   height: 37px;
 }
-.Triangular_Slices_image_0{
-    width: 100%;
-    height: 118px;
+.Triangular_Slices_image_0 {
+  width: 100%;
+  height: 118px;
 }
