--- a/src/app/components/cards/cards.component.less
+++ b/src/app/components/cards/cards.component.less
@@ -29,7 +29,7 @@ body {
   display: inline-block;
   width: @card-width;
   height: @card-height;
-  font: @font-size "Trebuchet MS";
+  font: @font-size "Calibri";
 
   margin: @gutter;
   border-radius: @card-padding;
