--- a/src/app/components/card/card.component.less
+++ b/src/app/components/card/card.component.less
@@ -1,7 +1,7 @@
 @color: #c0c0c0;
 @background: #f0f0f0;
 @gutter: 10px;
-@font-size: 13px;
+@font-size: 12px;
 
 @card-background: #fff;
 @card-padding: 4px;
@@ -28,7 +28,7 @@ body {
   display: inline-block;
   width: @card-width;
   height: @card-height;
-  font: @font-size "Trebuchet MS";
+  font: @font-size "Calibri";
 
   margin: @gutter;
   border-radius: @card-padding;
@@ -178,7 +178,7 @@ body {
   margin-left: 6px;
 }
 
-.title {
+.card-title {
 	font: 18px 'Trebuchet MS';
 	color: #444;
 	text-align: center;
@@ -224,4 +224,8 @@ body {
 .Triangular_Slices_image_0 {
   width: 100%;
   height: 100px;
+}
+.export-btn{
+  margin-bottom: 5px;
+  margin-top: 5px;
 }
