--- a/src/app/components/cards/cards.component.less
+++ b/src/app/components/cards/cards.component.less
@@ -113,6 +113,7 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  color: black !important;
 
   &--centered {
     justify-content: center;
