--- a/src/app/components/card/card.component.less
+++ b/src/app/components/card/card.component.less
@@ -184,8 +184,7 @@ body {
 	text-align: center;
 }
 .House_image_0{
-  width: 100%;
-  height: 160px;
+  width: 89%;
 }
 .Colouring_image_0{
   width: 100%;
@@ -194,12 +193,10 @@ body {
   width: 100%;
 }
 .Two_Distances_image_0{
-  width: 100%;
-  height: 110px;
+  width: 74%;
 }
 .Avoid_the_River_image_0{
-  width: 100%;
-  height: 130px;
+  width: 86%;
 }
 .Counting_Squares_image_0{
   width: 100%;
@@ -209,23 +206,24 @@ body {
   width: 100%;
 }
 .Benford_s_Law_image_0{
-  width: 50%;
+  width: 64%;
 }
 .Benford_s_Law_image_1{
   width: 50%;
 }
 .Card_Sums_image_0{
-  width: 50%;
+  width: 75%;
 }
 .Pong_Hau_K_i_image_0{
-  width: 90%;
-  height: 37px;
+  width: 64%;
 }
 .Triangular_Slices_image_0 {
-  width: 100%;
-  height: 100px;
+  width: 83%;
 }
 .export-btn{
   margin-bottom: 5px;
   margin-top: 5px;
+}
+div p{
+  margin-bottom: -5px;
 }
