--- a/src/app/components/cards/cards.component.less
+++ b/src/app/components/cards/cards.component.less
@@ -1,6 +1,6 @@
 @color: #c0c0c0;
 @background: #f0f0f0;
-@gutter: 10px;
+@gutter: 20px;
 @font-size: 12px;
 
 @card-background: #fff;
@@ -34,7 +34,7 @@ body {
   margin: @gutter;
   border-radius: @card-padding;
   background: @card-background;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.18);
+  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.18);
 
   &:before,
   &:after {
@@ -228,3 +228,12 @@ div p{
 .monkey_business{
   font-size: 11px;
 }
+
+/*
+@media print{
+  .card{
+   
+    border: 1px solid black;
+  }
+}
+*/
