booklet component added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,6 +9,8 @@
  
   <button mat-flat-button color="accent" (click)="export()"><mat-icon>print</mat-icon>
     Export</button>
+    <button mat-flat-button color="primary" routerLink="p/booklet"><mat-icon></mat-icon>
+      Card Booklet</button>
 
 </mat-toolbar>
 <router-outlet></router-outlet>
