removed jspdf and html to canva dependecies

--- a/src/app/components/cards/cards.component.less
+++ b/src/app/components/cards/cards.component.less
@@ -229,11 +229,13 @@ div p{
   font-size: 11px;
 }
 
-/*
+
 @media print{
   .card{
    
-    border: 1px solid black;
+    border: none;
+   // border-radius: none;
+    box-shadow: none;
   }
 }
-*/
+
