--- a/src/app/components/cards.component.scss
+++ b/src/app/components/cards.component.scss
@@ -1,39 +1,36 @@
-@color: #c0c0c0;
-@background: #f0f0f0;
-@gutter: 20px;
-@font-size: 12px;
+$color: #c0c0c0;
+$background: #f0f0f0;
+$gutter: 20px;
+$font-size: 12px;
 
-@card-background: #fff;
-@card-padding: 4px;
-@card-width: 240px;
-@card-height: 336px;
-@card-color-red: #e44145;
-@card-color-black: #252525;
-@card-symbol-size: 40px;
+$card-background: #fff;
+$card-padding: 4px;
+$card-color-red: #e44145;
+$card-color-black: #252525;
+$card-symbol-size: 40px;
 
 body {
   padding: 0;
   margin: 0;
-  background: @background;
+  background: $background;
 }
 
-.cards {
+.cards-container {
   text-align: center;
-  max-width: 100%;
   margin: 0 auto;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .card {
   cursor: pointer;
   position: relative;
-  display: inline-block;
-  width: @card-width;
-  height: @card-height;
-  font: @font-size "Calibri";
+  display: block;
+  font: $font-size "Calibri";
 
-  margin: @gutter;
-  border-radius: @card-padding;
-  background: @card-background;
+  margin: $gutter;
+  border-radius: $card-padding;
+  background: $card-background;
   box-shadow: 0 1px 4px rgba(0, 0, 0, 0.18);
 
   &:before,
@@ -47,27 +44,27 @@ body {
   }
 
   &:before {
-    top: @card-padding;
-    left: @card-padding;
+    top: $card-padding;
+    left: $card-padding;
   }
 
   &:after {
-    bottom: @card-padding;
-    right: @card-padding;
+    bottom: $card-padding;
+    right: $card-padding;
     transform: rotate(180deg);
   }
 
   &--heart {
-    color: @card-color-red;
+    color: $card-color-red;
 
     &:before,
     &:after {
       content: attr(value) " ♥";
     }
   }
-  
+
   &--spade {
-    color: @card-color-black;
+    color: $card-color-black;
 
     &:before,
     &:after {
@@ -76,7 +73,7 @@ body {
   }
 
   &--diamond {
-    color: @card-color-red;
+    color: $card-color-red;
 
     &:before,
     &:after {
@@ -85,7 +82,7 @@ body {
   }
 
   &--club {
-    color: @card-color-black;
+    color: $card-color-black;
 
     &:before,
     &:after {
@@ -100,10 +97,10 @@ body {
   position: absolute;
   display: flex;
   justify-content: space-between;
-  top: 13 * @card-padding;
-  left: 6 * @card-padding;
-  right: 6 * @card-padding;
-  bottom: 8 * @card-padding;
+  top: 13 * $card-padding;
+  left: 6 * $card-padding;
+  right: 6 * $card-padding;
+  bottom: 8 * $card-padding;
 
   &--centered {
     justify-content: center;
@@ -123,12 +120,12 @@ body {
 
 .card__symbol {
   display: inline-block;
-  height: @card-symbol-size;
+  height: $card-symbol-size;
   text-align: center;
 
   &:before {
-    font-size: @card-symbol-size;
-    line-height: @card-symbol-size;
+    font-size: $card-symbol-size;
+    line-height: $card-symbol-size;
   }
 
   .card--heart &:before {
@@ -155,14 +152,6 @@ body {
   &:first-of-type {
     transform: rotate(0);
   }
-
-  &--big {
-    flex-basis: 0.25 * @card-height;
-  }
-
-  &--huge {
-    flex-basis: 0.45 * @card-height;
-  }
 }
 .card-image {
   width: 50px;
@@ -181,7 +170,7 @@ body {
   margin-left: 6px;
 }
 
-.title {
+.card-title {
   font: 18px "Trebuchet MS";
   color: #444;
   text-align: center;
@@ -222,18 +211,9 @@ body {
 .Triangular_Slices_image_0 {
   width: 83%;
 }
-div p{
-   margin-bottom: 0px;
+div p {
+  margin-bottom: 0px;
 }
-.monkey_business{
+.monkey_business {
   font-size: 11px;
 }
-
-/*
-@media print{
-  .card{
-   
-    border: 1px solid black;
-  }
-}
-*/
