--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,17 @@
-<mat-toolbar class="toolbar" color="primary">
- <!--
-   <button mat-icon-button class="example-icon" aria-label="Example icon-button with menu icon">
-    <mat-icon>menu</mat-icon>
-  </button>
--->
-  <span class ="title" routerLink="/">Virtual Maths Camp</span>
+<mat-toolbar class="toolbar" color="primary" *ngIf="!isPrinting">
+  <span class="title" routerLink="/">Virtual Maths Camp</span>
   <span class="example-spacer"></span>
- 
-  <button mat-flat-button color="accent" (click)="export()"><mat-icon>print</mat-icon>
-    Export</button>
-
+  <mat-form-field appearance="fill">
+    <mat-select [(value)]="printStyle">
+      <mat-option value="Web">Web</mat-option>
+      <mat-option value="Kenya">Kenya</mat-option>
+      <mat-option value="Hungary">Hungary</mat-option>
+    </mat-select>
+  </mat-form-field>
+  <button mat-flat-button color="accent" (click)="export()">
+    <mat-icon>print</mat-icon> Export
+  </button>
 </mat-toolbar>
-<router-outlet></router-outlet>
+<div [class]="printStyle === 'Web' ? 'Web' : 'print print-' + printStyle">
+  <router-outlet></router-outlet>
+</div>
