--- a/src/app/components/cards/cards.component.html
+++ b/src/app/components/cards/cards.component.html
@@ -1,10 +1,24 @@
-<section class="cards" *ngIf="deck">
-        <section  [class]="'card card--'+card.card_suit" attr.value={{card.card_value}} *ngFor="let card of deck" [routerLink]="[card.slug]">
-            <img class = "card-image" src="/assets/images/qr/https---virtualmathscamp.com-card-{{card.card_value}}{{card.card_suit.charAt(0).toUpperCase()}}.html.png" alt="image">
-            <div class="card__inner card__inner--centered">
-                <div class="card__column" [innerHTML]="card.statement">
-                </div>
-            </div>
-            <span class="vmc-text">Chatbot <br>VMC_{{card.card_value}}{{card.card_suit.charAt(0).toUpperCase()}}</span>
-        </section>       
+<section class="cards-container" *ngIf="deck">
+  <section
+    [class]="'card card--' + card.card_suit"
+    [attr.data-suit]="card.card_suit"
+    attr.value="{{ card.card_value }}"
+    *ngFor="let card of deck"
+    [routerLink]="[card.slug]"
+  >
+    <img
+      class="card-image"
+      src="/assets/images/qr/https---virtualmathscamp.com-card-{{
+        card.card_value
+      }}{{ card.card_suit.charAt(0).toUpperCase() }}.html.png"
+      alt="image"
+    />
+    <div class="card__inner card__inner--centered">
+      <div class="card__column" [innerHTML]="card.statement"></div>
+    </div>
+    <span class="vmc-text"
+      >Chatbot <br />VMC_{{ card.card_value
+      }}{{ card.card_suit.charAt(0).toUpperCase() }}</span
+    >
+  </section>
 </section>
