--- a/src/app/components/cards.component.scss
+++ b/src/app/components/cards.component.scss
@@ -27,6 +27,8 @@ body {
   position: relative;
   display: block;
   font: $font-size "Calibri";
+  width: 2.5in;
+  height: 3.5in;
 
   margin: $gutter;
   border-radius: $card-padding;
