updated urls for cards

--- a/src/app/components/cards/cards.component.html
+++ b/src/app/components/cards/cards.component.html
@@ -6,7 +6,7 @@
     [attr.data-suit]="card.card_suit"
     attr.value="{{ card.card_value }}"
     
-    [routerLink]="'card/'+[card.slug]"
+    [routerLink]="'card/'+[card.slug]+'.html'"
   >
     <img
       class="card-image"
