--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -32,7 +32,7 @@
 
 
   
-  <div>
+  <div >
     <div class="content-title" *ngIf="card.title">
       <h2>Title: {{card.title}}</h2>
     </div>
@@ -43,70 +43,70 @@
       <h2>Main Version</h2>
       
       <span *ngIf="content.main_version.statement">
-        Statement:
-        <p>{{content.main_version.statement}}</p>
+        <h3>Statement:</h3>
+        <p [innerHTML]="content.main_version.statement"></p>
       </span>
       <span *ngIf="content.main_version.correct_answer">
-        Correct Answer:
-        <p>{{content.main_version.correct_answer}}</p>
+        <h3>Correct Answer:</h3>
+        <p [innerHTML]="content.main_version.correct_answer"></p>
       </span>
       <span *ngIf="content.main_version.hint">
-        Hint:
-        <p>{{content.main_version.hint}}</p>
+        <h3>Hint:</h3>
+        <p [innerHTML]="content.main_version.hint"></p>
       </span>
       <span *ngIf="content.main_version.explanation">
-        Explanation:
-        <p>{{content.main_version.explanation}}</p>
+        <h3>Explanation:</h3>
+        <p [innerHTML]="content.main_version.explanation"></p>
       </span>
       <span *ngIf="content.main_version.further_instructions">
-        Further Instructions:
-        <p>{{content.main_version.further_instructions}}</p>
+        <h3>Further Instructions:</h3>
+        <p [innerHTML]="content.main_version.further_instructions"></p>
       </span>
       <span *ngIf="content.main_version.strategy_tips">
-        Strategy Tips:
-        <p>{{content.main_version.strategy_tips}}</p>
+        <h3>Strategy Tips:</h3>
+        <p [innerHTML]="content.main_version.strategy_tips"></p>
       </span>
       
     </div>
     <div class="extension_1" *ngIf="content.extension_1">
       <h2>Extension 1</h2>
       <span *ngIf="content.extension_1.statement"> 
-        Statement:
-      <p>{{content.extension_1.statement}}</p>
+       <h3>Statement:</h3> 
+      <p [innerHTML]="content.extension_1.statement"></p>
       </span>
       <span *ngIf="content.extension_1.hint">
-        Hint:
-        <p>{{content.extension_1.hint}}</p>
+        <h3>Hint:</h3>
+        <p [innerHTML]="content.extension_1.hint"></p>
       </span>
       
       <span *ngIf="content.extension_1.correct_answer">
-        Correct Answer:
-        <p>{{content.extension_1.correct_answer}}</p>
+        <h3>Correct Answer:</h3>
+        <p [innerHTML]="content.extension_1.correct_answer"></p>
       </span>
       <span *ngIf="content.extension_1.explanation">
-        Explanation:
-        <p>{{content.extension_1.explanation}}</p>  
+        <h3>Explanation:</h3>
+        <p [innerHTML]="content.extension_1.explanation"></p>  
       </span>
       
     </div>
     <div class="extension_2" *ngIf="content.extension_2">
       <h2>Extension 2</h2>
       <span *ngIf="content.extension_2.statement">
-        Statement:
-        <p>{{content.extension_2.statement}}</p>  
+       <h3>Statement:</h3> 
+        <p [innerHTML]="content.extension_2.statement"></p>  
       </span>
       <span *ngIf="content.extension_2.hint">
-        Hint:
-        <p>{{content.extension_2.hint}}</p>  
+       <h3> Hint:</h3>
+        <p [innerHTML]="content.extension_2.hint"></p>  
       </span>
       <span *ngIf="content.extension_2.correct_answer">
-        Correct Answer:
-        <p>{{content.extension_2.correct_answer}}</p>
+        <h3>Correct Answer:</h3>
+        <p [innerHTML]="content.extension_2.correct_answer"></p>
       </span>
       
       <span *ngIf="content.extension_2.explanation">
-        Explanation:
-        <p>{{content.extension_2.explanation}}</p>
+        <h3>Explanation:</h3>
+        <p [innerHTML]="content.extension_2.explanation"></p>
       </span>
     </div>
     
@@ -115,12 +115,12 @@
         Additional Information
       </h2>
       <span *ngIf="content.additional_information.about">
-        About
-        <p>{{content.additional_information.about}}</p>  
+       <h3>About</h3> 
+        <p [innerHTML]="content.additional_information.about"></p>  
       </span>
       <span *ngIf="content.additional_information.references">
-        References
-        <p>{{content.additional_information.references}}</p>
+       <h3>References</h3> 
+        <p [innerHTML]="content.additional_information.references"></p>
       </span>
     </div>
   </div>
