--- a/src/app/components/cards.component.scss
+++ b/src/app/components/cards.component.scss
@@ -219,3 +219,61 @@ div p {
 .monkey_business {
   font-size: 11px;
 }
+
+//content explanations or card deck
+.Colouring_image_2{
+  width: 50%;
+}
+
+.Four_Colours_image_0{
+  width: 50%;
+}
+
+.Four_Colours_image_1{
+  width: 50%;
+}
+.Four_Colours_image_2{
+  width: 50%;
+}
+.Four_Colours_image_3{
+  width: 50%;
+}
+.Counting_Squares_image_2{
+  width: 60%
+}
+.Counting_Squares_image_1{
+  width: 50%
+}
+.Pong_Hau_K_i_image_2{
+  width: 50%
+}
+.Two_Distances_image_1{
+  width: 50%;
+}
+.Square_Numbers_and_Triangular_Numbers_image_0{
+  width: 50%
+}
+.Square_Numbers_and_Triangular_Numbers_image_1{
+  width: 50%
+}
+.Square_Numbers_and_Triangular_Numbers_image_2{
+  width: 50%
+}
+.Table_Handshakes_image_0{
+  width: 50%;
+}
+.Table_Handshakes_image_1{
+  width: 50%;
+}
+.Table_Handshakes_image_2{
+  width: 50%;
+}
+.Table_Handshakes_image_3{
+  width: 50%;
+}
+.Fifteen_image_0{
+  width: 50%
+}
+.Benford_s_Law_image_2{
+  width: 50%;
+}
