--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -42,29 +42,26 @@
     <div class="main_version" *ngIf="card.main_version">
       <h2>Main Version</h2>
       
-      <span *ngIf="card.main_version.statement">
-        Statement:
-        <p>{{card.main_version.statement}}</p>
-      </span>
+  
       <span *ngIf="card.main_version.correct_answer">
         Correct Answer:
-        <p>{{card.main_version.correct_answer}}</p>
+        <p [innerHTML]="card.main_version.correct_answer"></p>
       </span>
       <span *ngIf="card.main_version.hint">
         Hint:
-        <p>{{card.main_version.hint}}</p>
+        <p [innerHTML]="card.main_version.hint"></p>
       </span>
       <span *ngIf="card.main_version.explanation">
         Explanation:
-        <p>{{card.main_version.explanation}}</p>
+        <p [innerHTML]="card.main_version.explanation"></p>
       </span>
       <span *ngIf="card.main_version.further_instructions">
         Further Instructions:
-        <p>{{card.main_version.further_instructions}}</p>
+        <p [innerHTML]="card.main_version.further_instructions"></p>
       </span>
       <span *ngIf="card.main_version.strategy_tips">
         Strategy Tips:
-        <p>{{card.main_version.strategy_tips}}</p>
+        <p [innerHTML]="card.main_version.strategy_tips"></p>
       </span>
       
     </div>
@@ -72,11 +69,11 @@
       <h2>Extension 1</h2>
       <span *ngIf="card.extension_1.statement"> 
         Statement:
-      <p>{{card.extension_1.statement}}</p>
+      <p [innerHTML]="card.extension_1.statement"></p>
       </span>
       <span *ngIf="card.extension_1.hint">
         Hint:
-        <p>{{card.extension_1.hint}}</p>
+        <p [innerHTML]="card.extension_1.hint"></p>
       </span>
       
       <span *ngIf="card.extension_1.correct_answer">
@@ -85,7 +82,7 @@
       </span>
       <span *ngIf="card.extension_1.explanation">
         Explanation:
-        <p>{{card.extension_1.explanation}}</p>  
+        <p [innerHTML]="card.extension_1.explanation"></p>  
       </span>
       
     </div>
@@ -93,20 +90,20 @@
       <h2>Extension 2</h2>
       <span *ngIf="card.extension_2.statement">
         Statement:
-        <p>{{card.extension_2.statement}}</p>  
+        <p [innerHTML]="card.extension_2.statement"></p>  
       </span>
       <span *ngIf="card.extension_2.hint">
         Hint:
-        <p>{{card.extension_2.hint}}</p>  
+        <p [innerHTML]="card.extension_2.hint"></p>  
       </span>
       <span *ngIf="card.extension_2.correct_answer">
         Correct Answer:
-        <p>{{card.extension_2.correct_answer}}</p>
+        <p [innerHTML]="card.extension_2.correct_answer"></p>
       </span>
       
       <span *ngIf="card.extension_2.explanation">
         Explanation:
-        <p>{{card.extension_2.explanation}}</p>
+        <p [innerHTML]="card.extension_2.explanation"></p>
       </span>
     </div>
     
@@ -116,11 +113,11 @@
       </h2>
       <span *ngIf="card.additional_information.about">
         About
-        <p>{{card.additional_information.about}}</p>  
+        <p [innerHTML]="card.additional_information.about"></p>  
       </span>
       <span *ngIf="card.additional_information.references">
         References
-        <p>{{card.additional_information.references}}</p>
+        <p [innerHTML]="card.additional_information.references"></p>
       </span>
     </div>
   </div>
