--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -43,23 +43,23 @@
       <h2>Main Version</h2>
       
   
-      <span *ngIf="card.main_version.correct_answer">
+      <span class="main_answer" *ngIf="card.main_version.correct_answer">
         Correct Answer:
         <p [innerHTML]="card.main_version.correct_answer"></p>
       </span>
-      <span *ngIf="card.main_version.hint">
+      <span class="main_hint" *ngIf="card.main_version.hint">
         Hint:
         <p [innerHTML]="card.main_version.hint"></p>
       </span>
-      <span *ngIf="card.main_version.explanation">
+      <span class="main_explanation" *ngIf="card.main_version.explanation">
         Explanation:
         <p [innerHTML]="card.main_version.explanation"></p>
       </span>
-      <span *ngIf="card.main_version.further_instructions">
+      <span class="main_instructions" *ngIf="card.main_version.further_instructions">
         Further Instructions:
         <p [innerHTML]="card.main_version.further_instructions"></p>
       </span>
-      <span *ngIf="card.main_version.strategy_tips">
+      <span class="main_tips" *ngIf="card.main_version.strategy_tips">
         Strategy Tips:
         <p [innerHTML]="card.main_version.strategy_tips"></p>
       </span>
@@ -67,20 +67,20 @@
     </div>
     <div class="extension_1" *ngIf="card.extension_1">
       <h2>Extension 1</h2>
-      <span *ngIf="card.extension_1.statement"> 
+      <span class="ext_1_statement" *ngIf="card.extension_1.statement"> 
         Statement:
       <p [innerHTML]="card.extension_1.statement"></p>
       </span>
-      <span *ngIf="card.extension_1.hint">
+      <span class="ext_1_hint" *ngIf="card.extension_1.hint">
         Hint:
         <p [innerHTML]="card.extension_1.hint"></p>
       </span>
       
-      <span *ngIf="card.extension_1.correct_answer">
+      <span class="ext_1_answer" *ngIf="card.extension_1.correct_answer">
         Correct Answer:
         <p>{{card.extension_1.correct_answer}}</p>
       </span>
-      <span *ngIf="card.extension_1.explanation">
+      <span class="ext_1_explanation" *ngIf="card.extension_1.explanation">
         Explanation:
         <p [innerHTML]="card.extension_1.explanation"></p>  
       </span>
@@ -88,20 +88,20 @@
     </div>
     <div class="extension_2" *ngIf="card.extension_2">
       <h2>Extension 2</h2>
-      <span *ngIf="card.extension_2.statement">
+      <span class="ext_2_statement" *ngIf="card.extension_2.statement">
         Statement:
         <p [innerHTML]="card.extension_2.statement"></p>  
       </span>
-      <span *ngIf="card.extension_2.hint">
+      <span class="ext_2_hint" *ngIf="card.extension_2.hint">
         Hint:
         <p [innerHTML]="card.extension_2.hint"></p>  
       </span>
-      <span *ngIf="card.extension_2.correct_answer">
+      <span class="ext_2_answer" *ngIf="card.extension_2.correct_answer">
         Correct Answer:
         <p [innerHTML]="card.extension_2.correct_answer"></p>
       </span>
       
-      <span *ngIf="card.extension_2.explanation">
+      <span class="ext_2_explanation" *ngIf="card.extension_2.explanation">
         Explanation:
         <p [innerHTML]="card.extension_2.explanation"></p>
       </span>
