--- a/src/app/components/cards.component.scss
+++ b/src/app/components/cards.component.scss
@@ -11,7 +11,7 @@ $card-symbol-size: 40px;
 
 body {
   padding: 0;
-  margin: 0;
+  margin-left: 0;
   background: $background;
 }
 
@@ -156,11 +156,14 @@ body {
   }
 }
 .card-image {
-  width: 50px;
+  /*width: 50px;
   height: 50px;
   position: absolute;
   top: 0;
-  right: 0%;
+  right: 0%;*/
+  margin-top: 5px;
+  width: 271px;
+  height: 442px;
 }
 
 .vmc-text {
@@ -276,4 +279,7 @@ div p {
 }
 .Benford_s_Law_image_2{
   width: 50%;
+}
+.content-title{
+//  max-width: 400px;
 }
