display all content on condition

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,10 @@
-<mat-toolbar class="toolbar" color="primary">
-  <span class="title" routerLink="/">Virtual Maths Camp</span>
-  <span class="example-spacer"></span>
-</mat-toolbar>
 <div>
-  <router-outlet></router-outlet>
+  <mat-toolbar class="toolbar" color="primary">
+    <span class="title" routerLink="/">Virtual Maths Camp</span>
+    <span class="example-spacer"></span>
+  </mat-toolbar>
+  <div>
+    <router-outlet></router-outlet>
+  </div>
+<app-footer></app-footer> 
 </div>
