--- a/src/app/components/cards/cards.component.html
+++ b/src/app/components/cards/cards.component.html
@@ -1,6 +1,6 @@
 <section class="cards-container" *ngIf="deck">
   <section *ngFor="let card of deck">
-    <mat-card>
+    <mat-card class="card-mat">
       <mat-card-subtitle>{{card.title}}</mat-card-subtitle>
       <img 
       class="card-image" 
