--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -11,10 +11,12 @@
     <img class="card-image" src="{{'assets/print-cards/' +card.card_value.toLowerCase()+card.card_suit.charAt(0).toLowerCase()+'.png'}}"/>
   <div >
  
-    <button *ngIf="card.main_version.correct_answer" mat-raised-button (click)="openDialog()">Try it out!</button>
-    <button mat-raised-button color="primary" (click)="showHint()">{{showHintContent?"Hide Hint": "Show Hint to Answer"}}</button>
 
-    <div *ngIf="showHintContent">
+    
+  <div *ngIf="card.card_suit === 'diamond' || card.card_suit === 'club'">
+     <!--Puzzles and Counting-->
+     <button mat-raised-button color="primary" (click)="showHint()">{{showHintContent?"Hide Hint": "Show Hint to Answer"}}</button>
+     <div *ngIf="showHintContent">
       <mat-card class="main_version" *ngIf="card.main_version">
     
         <span class="main_hint" *ngIf="card.main_version.hint">
@@ -43,17 +45,66 @@
               <mat-card-subtitle> Strategy Tips:</mat-card-subtitle>
               <p [innerHTML]="card.main_version.strategy_tips"></p>
             </span>
+            <button mat-raised-button color="accent" (click)="showExtension()">{{showExtensionsContent?"Hide Extensions": "Show Extensions"}}</button>
           </div>
         </div>
-       
-     
-      
         </mat-card>
     </div>
-    <div>
-      Check out more extensions of the puzzle
     </div>
-    <button mat-raised-button color="accent" (click)="showExtension()">{{showExtensionsContent?"Hide Extensions": "Show Extensions"}}</button>
+
+    <div *ngIf="card.card_suit === 'heart'">
+      <!--Fun Fact-->
+      <button mat-raised-button color="primary" (click)="showHint()">{{showHintContent?"Hide Hint": "Show Hint to Funfact"}}</button>
+     <div *ngIf="showHintContent">
+      <mat-card class="main_version" *ngIf="card.main_version">
+    
+        <span class="main_hint" *ngIf="card.main_version.hint">
+          <mat-card-subtitle > Hint:</mat-card-subtitle>
+          <p [innerHTML]="card.main_version.hint"></p>
+
+          <button mat-raised-button color="primary" (click)="showExplanation()">{{showExplanationContent?"Hide Explanation": "Show Explanation"}}</button>
+        </span>  
+  
+          <div class="explanation" *ngIf="showExplanationContent">
+            <span class="main_explanation" *ngIf="card.main_version.explanation">
+              <mat-card-subtitle> Explanation:</mat-card-subtitle>
+              <p [innerHTML]="card.main_version.explanation"></p>
+            </span>
+            <button mat-raised-button color="accent" (click)="showExtension()">{{showExtensionsContent?"Hide Extensions": "Show Extensions"}}</button>
+          
+          </div>
+        </mat-card>
+    </div>
+     </div>
+     <div *ngIf="card.card_suit === 'spade'">
+      <!--Game-->
+      <button mat-raised-button color="primary" (click)="showHint()">{{showHintContent?"Hide tips": "Show strategy tips"}}</button>
+      <div *ngIf="showHintContent">
+       <mat-card class="main_version" *ngIf="card.main_version">
+     
+         <span class="main_tip" *ngIf="card.main_version.strategy_tips">
+           <mat-card-subtitle > Tip:</mat-card-subtitle>
+           <p [innerHTML]="card.main_version.strategy_tips"></p>
+ 
+           <button mat-raised-button color="primary" (click)="showExplanation()">{{showExplanationContent?"Hide instructions": "Show further instructions"}}</button>
+         </span>  
+   
+           <div class="instructions" *ngIf="showExplanationContent">
+             <span class="main_explanation" *ngIf="card.main_version.further_instructions">
+               <mat-card-subtitle> Explanation:</mat-card-subtitle>
+               <p [innerHTML]="card.main_version.further_instructions"></p>
+             </span>
+        
+             <button mat-raised-button color="accent" (click)="showExtension()">{{showExtensionsContent?"Hide Extensions": "Show Extensions"}}</button>
+           </div>
+         </mat-card>
+     </div>
+     </div>
+ 
+    
+
+
+
 
     <div class="extensions" *ngIf="showExtensionsContent">
     <mat-card class="extension_1" *ngIf="card.extension_1">
